added installer command